# music_assistant

./: config.py  docker-compose.yml  logger.py  logging.yml  main.py  pyproject.toml
models/: common.py  user.py
static/: index.html
utils/: db_clients.py
